[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Magali Vangkeosay <magali.vangkeosay@aegir-ingenierie.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
munch = "^2.5.0"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
